all browsers support + shop page
now shop here, yo can buy moderator. All css rules which need prefix like -o-, -moz-, -webkit-, -ms- now with prefixed

--- a/demonlist.html
+++ b/demonlist.html
@@ -9,25 +9,25 @@
   </head>
   <body> 
     <nav>
-      <div class="hamburger" onclick="this.classList.toggle('is-active')"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/">Главная</a><a href="demonlist.html">Демонлист</a><a href="modlist.html">Модераторы</a>
+      <div class="hamburger" onclick="this.classList.toggle('is-active')"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/">Главная</a><a href="demonlist.html">Демонлист</a><a href="modlist.html">Модераторы</a><a href="shop.html">Магазин</a>
     </nav>
     <main><section class="list dl">
   <ul>
     <li><span class="img"><a href="https://drive.google.com/file/d/1WDKzoWOKMFJJCBvG2op6DUcmSfmZEqC7/view" target="_blank"><img src="img/demons/geterosexuality.png" alt="geterosexuality verification" width="1080px"/></a></span><span class="desc">
         <h2>#1 geterosexuality</h2>
-        <p>верифнул: EGGephant</p>
+        <p>верификатор: EGGephant</p>
         <p>id: 23</p></span></li>
     <li><span class="img"><a href="https://www.youtube.com/watch?v=Tr_qnm3lzbU" target="_blank"><img src="img/demons/rainbow party.png" alt="rainbow party verification" width="1080px"/></a></span><span class="desc">
         <h2>#2 rainbow party</h2>
-        <p>верифнул: Tims Team</p>
+        <p>верификатор: Tims Team</p>
         <p>id: 11</p></span></li>
     <li><span class="img"><a href="https://www.youtube.com/watch?v=Dn2QLWeyzHI" target="_blank"><img src="img/demons/keres lights.png" alt="keres lights verification" width="1080px"/></a></span><span class="desc">
         <h2>#3 keres lights</h2>
-        <p>верифнул: Lilys</p>
+        <p>верификатор: Lilys</p>
         <p>id: 19</p></span></li>
     <li><span class="img"><a href="https://www.youtube.com/watch?v=F1fyRof25mg" target="_blank"><img src="img/demons/rejuvante.png" alt="rejuvante verification" width="1080px"/></a></span><span class="desc">
         <h2>#4 rejuvante</h2>
-        <p>верифнул: Arti</p>
+        <p>верификатор: Arti</p>
         <p>id: 44</p></span></li>
   </ul>
 </section></main>
