--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body> 
     <nav>
-      <div class="hamburger" onclick="this.classList.toggle('is-active')"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/">Главная</a><a href="demonlist.html">Демонлист</a><a href="modlist.html">Модераторы</a>
+      <div class="hamburger" onclick="this.classList.toggle('is-active')"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/">Главная</a><a href="demonlist.html">Демонлист</a><a href="modlist.html">Модераторы</a><a href="shop.html">Магазин</a>
     </nav>
     <main><section><img class="halloffame active" src="img/halloffame/outline.png" alt="level 1"/><img class="halloffame" src="img/halloffame/arti.png" alt="level 2"/><img class="halloffame" src="img/halloffame/retrobreaker.png" alt="level 3"/>
   <h1>Добро пожаловать на WowbinGDPS!</h1>
