--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WowbipPS | 404</title>
+    <title>WowbipPS | Магазин</title>
     <link rel="stylesheet" href="styles/index.css">
   </head>
   <body> 
@@ -12,7 +12,8 @@
       <div class="hamburger" onclick="this.classList.toggle('is-active')"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/">Главная</a><a href="demonlist.html">Демонлист</a><a href="modlist.html">Модераторы</a><a href="shop.html">Магазин</a>
     </nav>
     <main><section>
-  <h1 class="error">Ошибка 404</h1>страница не надена
+  <h2>Мл. Модератор 50₽</h2>
+  <p>что-бы заказать введите в сообщении *ваш ник на gdps*</p><sub>потом напишите Arti или Wowbin в лс что-бы они вам его выдали</sub><a class="buy" href="https://www.donationalerts.com/r/wowbinds_donat_">Купить</a>
 </section></main>
   </body>
   <footer>
