--- a/shop.html
+++ b/shop.html
@@ -12,7 +12,7 @@
       <div class="hamburger" onclick="this.classList.toggle('is-active')"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/">Главная</a><a href="demonlist.html">Демонлист</a><a href="modlist.html">Модераторы</a><a href="shop.html">Магазин</a>
     </nav>
     <main><section>
-  <h2>Мл. Модератор 50₽</h2>
+  <h2>Модератор 50₽</h2>
   <p>что-бы заказать введите в сообщении *ваш ник на gdps*</p><sub>потом напишите Arti или Wowbin в лс что-бы они вам его выдали</sub><a class="buy" href="https://www.donationalerts.com/r/wowbinds_donat_">Купить</a>
 </section></main>
   </body>
