--- a/index.html
+++ b/index.html
@@ -4,29 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WowbipPS | Главная</title>
+    <title>Wowbin PS</title>
     <link rel="stylesheet" href="styles/index.css">
   </head>
   <body> 
     <nav>
-      <div class="hamburger" onclick="this.classList.toggle('is-active')"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/">Главная</a><a href="demonlist.html">Демонлист</a><a href="modlist.html">Модераторы</a><a href="shop.html">Магазин</a>
+      <div class="hamburger" onclick="this.classList.toggle('is-active')"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/" data-ru="Главная" data-eng="Home"></a><a href="demonlist.html" data-ru="Демонлист" data-eng="Demonlist"></a><a href="modlist.html" data-ru="Модераторы" data-eng="Moderators"></a><a href="shop.html" data-ru="Магазин" data-eng="Shop"></a><a id="switchLang" data-eng="🇷🇺" data-ru="🏴󠁧󠁢󠁥󠁮󠁧󠁿"></a>
     </nav>
     <main><section><img class="halloffame active" src="img/halloffame/outline.png" alt="level 1"/><img class="halloffame" src="img/halloffame/arti.png" alt="level 2"/><img class="halloffame" src="img/halloffame/retrobreaker.png" alt="level 3"/>
-  <h1>Добро пожаловать на WowbinGDPS!</h1>
-  <p>
-    Это не простой сервер по geometry dash на говно хосте, сервера которого не выдержат и пяти аккаунтов в топе,
-    это приватный сервер,
-    созданный на HalogenHost.
-    Здесь хорошая защита от спаммеров и поэтому сервер защищён от ддосов,
-    как и оригинальный сервер.
-    На сервере в дискорде вполне много человек,
-    однако уровней до сих пор мало из-за чего критерии рейта до сих пор низкие,
-    так что даже средние креаторы могут создавать что-то своими лапками
-  </p>
+  <h1 data-ru="Добро пожаловать на WowbinGDPS!" data-eng="Welcome to WowbinGDPS!"></h1>
+  <p data-ru="Это не простой сервер по geometry dash на говно хосте, сервера которого не выдержат и пяти аккаунтов в топе, это приватный сервер, созданный на HalogenHost. Здесь хорошая защита от спаммеров и поэтому сервер защищён от ддосов, как и оригинальный сервер. На сервере в дискорде вполне много человек, однако уровней до сих пор мало из-за чего критерии рейта до сих пор низкие, так что даже средние креаторы могут создавать что-то своими лапками"></p>
 </section>
 <script src="scripts/images.js"> </script></main>
   </body>
   <footer>
     <p>Wowbinps &copy 2022-2022</p><a href="https://discord.gg/Y6s9nHx44Y">Discord</a><a href="https://www.youtube.com/channel/UCo0ufhyJ3n6iHtd7Y1zUBug">Youtube</a>
   </footer>
+  <script src="scripts/index.js" type="text/javascript"> </script>
 </html>
