--- a/shop.html
+++ b/shop.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WowbipPS | Магазин</title>
+    <title>Wowbin PS</title>
     <link rel="stylesheet" href="styles/index.css">
   </head>
   <body> 
     <nav>
-      <div class="hamburger" onclick="this.classList.toggle('is-active')"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/">Главная</a><a href="demonlist.html">Демонлист</a><a href="modlist.html">Модераторы</a><a href="shop.html">Магазин</a>
+      <div class="hamburger" onclick="this.classList.toggle('is-active')"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/" data-ru="Главная" data-eng="Home"></a><a href="demonlist.html" data-ru="Демонлист" data-eng="Demonlist"></a><a href="modlist.html" data-ru="Модераторы" data-eng="Moderators"></a><a href="shop.html" data-ru="Магазин" data-eng="Shop"></a><a id="switchLang" data-eng="🇷🇺" data-ru="🏴󠁧󠁢󠁥󠁮󠁧󠁿"></a>
     </nav>
     <main><section>
-  <h2>Модератор 50₽</h2>
-  <p>что-бы заказать введите в сообщении *ваш ник на gdps*</p><sub>потом напишите Arti или Wowbin в лс что-бы они вам его выдали</sub><a class="buy" href="https://www.donationalerts.com/r/wowbinds_donat_">Купить</a>
+  <h2 data-ru="Модератор 50₽" data-eng="Moderator 0.8$"></h2>
+  <p data-ru="что-бы заказать Модератор введите в сообщении *ваш ник на gdps*" data-eng="to order Moderator send message with *your nickname*"></p><sub data-ru="потом напишите Arti или Wowbin в лс что-бы они вам его выдали" data-eng="then type to Arti or Wowbin dm for get it"></sub><a class="buy" href="https://www.donationalerts.com/r/wowbinds_donat_" data-ru="Купить" data-eng="Buy"></a>
 </section></main>
   </body>
   <footer>
     <p>Wowbinps &copy 2022-2022</p><a href="https://discord.gg/Y6s9nHx44Y">Discord</a><a href="https://www.youtube.com/channel/UCo0ufhyJ3n6iHtd7Y1zUBug">Youtube</a>
   </footer>
+  <script src="scripts/index.js" type="text/javascript"> </script>
 </html>
