--- a/demonlist.html
+++ b/demonlist.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WowbipPS | Демонлист</title>
+    <title>Wowbin PS</title>
     <link rel="stylesheet" href="styles/index.css">
   </head>
   <body> 
     <nav>
-      <div class="hamburger" onclick="this.classList.toggle('is-active')"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/">Главная</a><a href="demonlist.html">Демонлист</a><a href="modlist.html">Модераторы</a><a href="shop.html">Магазин</a>
+      <div class="hamburger" onclick="this.classList.toggle('is-active')"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/" data-ru="Главная" data-eng="Home"></a><a href="demonlist.html" data-ru="Демонлист" data-eng="Demonlist"></a><a href="modlist.html" data-ru="Модераторы" data-eng="Moderators"></a><a href="shop.html" data-ru="Магазин" data-eng="Shop"></a><a id="switchLang" data-eng="🇷🇺" data-ru="🏴󠁧󠁢󠁥󠁮󠁧󠁿"></a>
     </nav>
     <main><section class="list dl">
   <ul>
     <li><span class="img"><a href="https://drive.google.com/file/d/1WDKzoWOKMFJJCBvG2op6DUcmSfmZEqC7/view" target="_blank"><img src="img/demons/geterosexuality.png" alt="geterosexuality verification" width="1080px"/></a></span><span class="desc">
         <h2>#1 geterosexuality</h2>
-        <p>верификатор: EGGephant</p>
+        <p data-ru="верификатор: EGGephant" data-eng="verified by: EGGephant"></p>
         <p>id: 23</p></span></li>
     <li><span class="img"><a href="https://www.youtube.com/watch?v=Tr_qnm3lzbU" target="_blank"><img src="img/demons/rainbow party.png" alt="rainbow party verification" width="1080px"/></a></span><span class="desc">
         <h2>#2 rainbow party</h2>
-        <p>верификатор: Tims Team</p>
+        <p data-ru="верификатор: Tims Team" data-eng="verified by: Tims Team"></p>
         <p>id: 11</p></span></li>
     <li><span class="img"><a href="https://www.youtube.com/watch?v=Dn2QLWeyzHI" target="_blank"><img src="img/demons/keres lights.png" alt="keres lights verification" width="1080px"/></a></span><span class="desc">
         <h2>#3 keres lights</h2>
-        <p>верификатор: Lilys</p>
+        <p data-ru="верификатор: Lilys" data-eng="verified by: Lilys"></p>
         <p>id: 19</p></span></li>
     <li><span class="img"><a href="https://www.youtube.com/watch?v=F1fyRof25mg" target="_blank"><img src="img/demons/rejuvante.png" alt="rejuvante verification" width="1080px"/></a></span><span class="desc">
         <h2>#4 rejuvante</h2>
-        <p>верификатор: Arti</p>
+        <p data-ru="верификатор: Arti" data-eng="verified by: Arti"></p>
         <p>id: 44</p></span></li>
   </ul>
 </section></main>
@@ -35,4 +35,5 @@
   <footer>
     <p>Wowbinps &copy 2022-2022</p><a href="https://discord.gg/Y6s9nHx44Y">Discord</a><a href="https://www.youtube.com/channel/UCo0ufhyJ3n6iHtd7Y1zUBug">Youtube</a>
   </footer>
+  <script src="scripts/index.js" type="text/javascript"> </script>
 </html>
