--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body> 
     <nav>
-      <div class="hamburger" onclick="this.classList.toggle('is-active')"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/" data-ru="Главная" data-eng="Home"></a><a href="demonlist.html" data-ru="Демонлист" data-eng="Demonlist"></a><a href="modlist.html" data-ru="Модераторы" data-eng="Moderators"></a><a href="shop.html" data-ru="Магазин" data-eng="Shop"></a><a id="switchLang" data-eng="🇷🇺" data-ru="🏴󠁧󠁢󠁥󠁮󠁧󠁿"></a>
+      <div class="hamburger" onclick="this.classList.toggle('is-active')"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/" data-ru="Главная" data-eng="Home"></a><a href="demonlist.html" data-ru="Демонлист" data-eng="Demonlist"></a><a href="modlist.html" data-ru="Модераторы" data-eng="Moderators"></a><a href="shop.html" data-ru="Магазин" data-eng="Shop"></a><a id="switchLang" data-eng="🏴󠁧󠁢󠁥󠁮󠁧󠁿" data-ru="🇷🇺"></a>
     </nav>
     <main><section><img class="halloffame active" src="img/halloffame/outline.png" alt="level 1"/><img class="halloffame" src="img/halloffame/arti.png" alt="level 2"/><img class="halloffame" src="img/halloffame/retrobreaker.png" alt="level 3"/>
   <h1 data-ru="Добро пожаловать на WowbinGDPS!" data-eng="Welcome to WowbinGDPS!"></h1>
